<resources>
    <string name="app_name">My Receipt Book</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_receipts_yet">You don\'t have any receipts yet</string>
    <string name="start_adding_receipts">You can start by adding a new receipt</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="title">Title</string>
    <string name="short_description">Short Description</string>
    <string name="large_description">Large Description</string>
    <string name="image_content_desc">Image to be saved</string>
    <string name="test_receipt_title">Test receipt title</string>
    <string name="test_receipt_short_description">Test receipt short description</string>
    <string name="test_image_content_desc">test image</string>
    <string name="listing_image_content_desc">listing image content desc</string>
    <string name="todo">TODO</string>
</resources>
